--- a/_dev/2ndNet.cbp
+++ b/_dev/2ndNet.cbp
@@ -36,10 +36,15 @@
 			<Add library="SDL2" />
 			<Add library="SDL2_net" />
 		</Linker>
+		<Unit filename="./client.cpp" />
+		<Unit filename="./memread.cpp" />
 		<Unit filename="main.cpp" />
+		<Unit filename="memread.h" />
 		<Unit filename="packets.cpp" />
 		<Unit filename="reciever.cpp" />
+		<Unit filename="refdata.cpp" />
 		<Unit filename="sender.cpp" />
+		<Unit filename="server.cpp" />
 		<Unit filename="test/crc32.cpp" />
 		<Unit filename="test/crc32.h" />
 		<Unit filename="zndNet.cpp" />
