--- a/_dev/2ndNet.cbp
+++ b/_dev/2ndNet.cbp
@@ -31,27 +31,36 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
+			<Add option="-Wno-unused-function" />
 		</Compiler>
 		<Linker>
 			<Add library="SDL2" />
 			<Add library="SDL2_net" />
 		</Linker>
+		<Unit filename="addrseq.h" />
 		<Unit filename="client.cpp" />
+		<Unit filename="client.h" />
+		<Unit filename="client_threads.cpp" />
 		<Unit filename="errcode.h" />
+		<Unit filename="events.h" />
+		<Unit filename="inpacket.h" />
 		<Unit filename="main.cpp" />
-		<Unit filename="memread.cpp" />
-		<Unit filename="memread.h" />
-		<Unit filename="packets.cpp" />
+		<Unit filename="netsession.h" />
+		<Unit filename="netuser.h" />
 		<Unit filename="reciever.cpp" />
-		<Unit filename="refdata.cpp" />
 		<Unit filename="sender.cpp" />
+		<Unit filename="sendstorage.h" />
 		<Unit filename="server.cpp" />
+		<Unit filename="server.h" />
+		<Unit filename="server_threads.cpp" />
 		<Unit filename="session.cpp" />
 		<Unit filename="test/crc32.cpp" />
 		<Unit filename="test/crc32.h" />
+		<Unit filename="tick.h" />
+		<Unit filename="types.h" />
+		<Unit filename="utils.h" />
 		<Unit filename="zndNet.cpp" />
 		<Unit filename="zndNet.h" />
-		<Unit filename="zndNetPkt.h" />
 		<Extensions>
 			<code_completion>
 				<search_path add="/usr/include/" />
