Separate users and declare class for self hosted session.

--- a/_dev/2ndNet.cbp
+++ b/_dev/2ndNet.cbp
@@ -54,6 +54,8 @@
 		<Unit filename="server.h" />
 		<Unit filename="server_threads.cpp" />
 		<Unit filename="session.cpp" />
+		<Unit filename="single.cpp" />
+		<Unit filename="single.h" />
 		<Unit filename="test/crc32.cpp" />
 		<Unit filename="test/crc32.h" />
 		<Unit filename="tick.h" />
