--- a/_dev/Makefile
+++ b/_dev/Makefile
@@ -12,6 +12,8 @@ OBJS =  \
 	server.cpp\
 	server_threads.cpp\
 	session.cpp\
+	single.cpp\
+	single_threads.cpp\
 	zndNet.cpp\
 	test/crc32.cpp
 	
@@ -20,3 +22,6 @@ server: $(OBJS)
 
 client: $(OBJS)
 	$(CXX) -DSEPARATE_TEST_CLIENT -std=c++11 -O0 -g -o zndclient $(OBJS) $(LIBS)
+
+single: $(OBJS)
+	$(CXX) -DSEPARATE_TEST_SINGLE -std=c++11 -O0 -g -o zndsingle $(OBJS) $(LIBS)
